# Nmap Changelog ($Id$); -*-text-*-

o [NSE][GH#854] New script smb-double-pulsar-backdoor detects the Shadow
  Brokers-leaked Double Pulsar backdoor in Windows SMB servers. [Andrew Orr]

o No longer allow ICMP Time Exceeded messages to mark a host as down during
  host discovery. Running traceroute at the same time as Nmap was causing
  interference. [David Fifield]

o [NSE][GH#807] Fixed a JSON library issue that was causing long integers
  to be expressed in the scientific/exponent notation. [nnposter]

o [Ncat] Made -i/--idle-timeout not cause Ncat in server mode to close while
  waiting for an initial connection. This was also causing -i to interfere with
  the HTTP proxy server mode. [Carlos Manso, Daniel Miller]

o [NSE][GH#766] The HTTP Host header will now include the port unless it is
  the default one for a given scheme. [nnposter]

o [NSE] Fixed several potential hangs in NSE scripts that used
  receive_buf(pattern), which will not return if the service continues to send
  data that does not match pattern. A new function in match.lua, pattern_limit,
  is introduced to limit the number of bytes consumed while searching for the
  pattern. [Daniel Miller, Jacek Wielemborek]

o [NSE] The HTTP response object has a new member, fragment, which contains
  a partially received body (if any) when the overall request fails to
  complete. [nnposter]

o [NSE][GH#731] NSE is now able to process HTTP responses with a Set-Cookie
  header that has an extraneous trailing semicolon. [nnposter]

o [Nsock] Handle any and all socket connect errors the same: raise as an Nsock
  error instead of fatal. This prevents Nmap and Ncat from quitting with
  "Strange error from connect:" [Daniel Miller]

o [Ncat][GH#773] Ncat in server mode properly handles TLS renegotiations and
  other situations where SSL_read returns a non-fatal error. This was causing
  SSL-over-TCP connections to be dropped. [Daniel Miller]
