@@ -347,7 +347,7 @@ local function path_ok (path, hostname, port)
   if pparts.authority then
     if pparts.userinfo
       or ( pparts.host ~= hostname )
-      or ( pparts.port and tonumber(pparts.port) ~= port.number ) then
+      or ( pparts.port and pparts.port ~= port.number ) then
       return false
     end
   end
